detailview done final

--- a/src/app/shared/detailview/detailview.component.html
+++ b/src/app/shared/detailview/detailview.component.html
@@ -2,10 +2,10 @@
 <app-jumbotron [Heading]="'user.main_heading.your_account'"></app-jumbotron>
 <mat-tab-group>
   <mat-tab label="{{'user.form_heading.profile' | translate}}">
-    <app-image-viewer [product]="product.image"></app-image-viewer>
+    <app-image-viewer [product]="productdata.image"></app-image-viewer>
   </mat-tab>
   <mat-tab label="{{'user.form_heading.edit_profile' | translate}}">
-    <app-description-viewer [product]="product"></app-description-viewer>
+    <app-description-viewer [product]="productdata"></app-description-viewer>
   </mat-tab>
   <mat-tab label="{{'user.form_heading.to_buy_list' | translate}}">
     <div class="profile-container"></div>
