--- a/src/app/shared/description-viewer/description-viewer.component.html
+++ b/src/app/shared/description-viewer/description-viewer.component.html
@@ -1,18 +1,24 @@
 <div class="description-container">
-  <h2>Name : {{product[0].name}}</h2>
-  <h3>CurrentPrice : {{product[0].price}}</h3>
-  <div>
-    <h3>Product details</h3>
-    <ul>
-      <ng-container *ngFor="let item of product[0].details | keyvalue">
-        <li><b>{{item.key}}</b> : {{item.value}}</li>
-      </ng-container>
-    </ul>
-  </div>
-  <div>
-    <h3>Description</h3>
-    <p>
-      {{product[0].description}}
-    </p>
-  </div>
+  <mat-card class="mat-elevation-z8">
+    <h2>Name : {{product.name}}</h2>
+    <h3>CurrentPrice : {{product.price}}</h3>
+    <mat-divider></mat-divider>
+    <br />
+    <div>
+      <h3>Product details</h3>
+      <ul>
+        <ng-container *ngFor="let item of product.details | keyvalue">
+          <li><b>{{item.key}}</b> : {{item.value}}</li>
+        </ng-container>
+      </ul>
+    </div>
+    <mat-divider></mat-divider>
+    <br />
+    <div>
+      <h3>Description</h3>
+      <p>
+        {{product.description}}
+      </p>
+    </div>
+  </mat-card>
 </div>
