--- a/src/app/shared/reviews-viewer/reviews-viewer.component.scss
+++ b/src/app/shared/reviews-viewer/reviews-viewer.component.scss
@@ -1,6 +1,6 @@
 .review-container {
-  padding: 20px;
+  padding: 20px 50px 20px 50px;
   .mat-form-field {
-    width: 95%;
+    width: 100%;
   }
 }
