--- a/src/app/shared/filter-input/filter-input.component.scss
+++ b/src/app/shared/filter-input/filter-input.component.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: flex-end;
   margin: 20px 43px 0px 0px;
+  .mat-form-field{
+    width: 40%;
+  }
   .filter-btn {
     height: 48px;
     position: relative;
