--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -43,6 +43,9 @@
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>{{ getLoginStatus() | translate }}
         </button>
+        <button mat-menu-item (click)="contact()">
+          <mat-icon>contact_support</mat-icon>Contact us
+        </button>
         <button mat-menu-item>
           <mat-icon>nights_stay</mat-icon>{{'nav_bar.menu.night_mode' |
           translate}}&nbsp;&nbsp;&nbsp;&nbsp;
