--- a/src/app/features/cart-management/checkout/checkout.component.html
+++ b/src/app/features/cart-management/checkout/checkout.component.html
@@ -1,36 +1,22 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.checkout_form'"></app-jumbotron>
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
-  <mat-step [completed]="step1" [editable]="false">
+  <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_billing_address" | translate}}
     </ng-template>
     <app-billing (step1status)="setstep1status($event)"></app-billing>
   </mat-step>
-  <mat-step [completed]="step2" [editable]="false">
+  <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.fill_out_your_address" | translate}}
     </ng-template>
     <app-payment (step2status)="setstep2status($event)"></app-payment>
   </mat-step>
-  <mat-step [completed]="false" [editable]="false">
+  <mat-step>
     <ng-template matStepLabel>
       {{"user.form_heading.sucess" | translate}}
     </ng-template>
-    <div class="success-card-wrapper">
-      <mat-card class="success-card">
-        {{"user.form_heading.order_is_placed_successfully" | translate}}
-      </mat-card>
-    </div>
-    <!-- <div class="checkout-button">
-      <button mat-raised-button color="warn" [routerLink]="['/home']">
-        {{"user.cart.continue_shopping" | translate}}
-      </button>
-    </div> -->
-    <mat-toolbar color="primary" class="c-bottom-action-bar checkout-button">
-      <button mat-raised-button [routerLink]="['/home']" class="order-button">
-        {{"user.cart.continue_shopping" | translate}}
-      </button>
-    </mat-toolbar>
+    <app-recipt></app-recipt>
   </mat-step>
 </mat-horizontal-stepper>
