--- a/src/app/layout/homepage/page-content/page-content.component.html
+++ b/src/app/layout/homepage/page-content/page-content.component.html
@@ -6,6 +6,12 @@
       [items_category1]="items_category1"
       [items_category2]="items_category2"
     ></app-category-card>
+    <!-- <app-product-carousel></app-product-carousel> -->
+    <app-product-carousel2
+      [item1]="productcarouselitems1"
+      [item2]="productcarouselitems2"
+      [item3]="productcarouselitems3"
+    ></app-product-carousel2>
     <app-image-slider
       [items_slider1]="items_slider1"
       [items_slider2]="items_slider2"
