--- a/src/assets/css/Globalportal.scss
+++ b/src/assets/css/Globalportal.scss
@@ -136,8 +136,8 @@ body {
 }
 
 //TODO: jay
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+// input[type='number']::-webkit-inner-spin-button,
+// input[type='number']::-webkit-outer-spin-button {
+//   -webkit-appearance: none;
+//   margin: 0;
+// }
