drastic changes and working properly

--- a/src/app/features/admin-management/adminpage/content/content.component.scss
+++ b/src/app/features/admin-management/adminpage/content/content.component.scss
@@ -1,6 +1,6 @@
 .space-medium {
-  padding: 60px 10px 0px 10px;
-  min-height: 550px;
+  padding: 30px 10px 10px 10px;
+  // min-height: 550px;
   .containerr {
     width: 100%;
     padding-right: 15px;
