--- a/src/app/features/admin-management/product-components/add-product/add-product.component.scss
+++ b/src/app/features/admin-management/product-components/add-product/add-product.component.scss
@@ -1,6 +1,6 @@
 .billing-container {
-  padding: 50px 100px 30px 100px;
-  min-height: 570px;
+  padding: 50px 100px 50px 100px;
+  // min-height: 570px;
   .edit-profile-card {
     min-height: 265px;
     width: 100%;
