--- a/src/app/features/cart-management/checkout/recipt/recipt.component.html
+++ b/src/app/features/cart-management/checkout/recipt/recipt.component.html
@@ -67,11 +67,11 @@
   </mat-card>
 </div>
 <mat-toolbar color="primary" class="checkout-button">
-  <button mat-raised-button (click)="downloadImage()">
+  <button mat-raised-button color="accent" (click)="downloadImage()">
     Download Recipt As Image
   </button>
   &nbsp;&nbsp;
-  <button mat-raised-button (click)="downloadPdf()">
+  <button mat-raised-button color="accent" (click)="downloadPdf()">
     Download Recipt As Pdf
   </button>
 </mat-toolbar>
