--- a/src/app/features/user-management/profile/buy-list/buy-list.component.scss
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.scss
@@ -1,13 +1,13 @@
 .delete-container {
-  min-height: 501px;
+  // min-height: 501px;
   .delete-input {
-    padding: 40px 300px 0px 300px;
+    padding: 30px 300px 0px 300px;
     .btn {
       margin-right: 10px;
     }
   }
   .buy-card-container {
-    padding: 15px 150px 0px 150px;
+    padding: 0px 150px 0px 150px;
     .filter-btn {
       display: flex;
       justify-content: flex-end;
