--- a/src/app/layout/homepage/page-content/page-content.component.scss
+++ b/src/app/layout/homepage/page-content/page-content.component.scss
@@ -4,3 +4,8 @@ h3.h3 {
   text-transform: capitalize;
   font-size: 1.7em;
 }
+.product-page {
+  height: 100%;
+  padding-bottom: 5px;
+  // min-height: 2220px;
+}
