--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -44,7 +44,7 @@
           <mat-icon>exit_to_app</mat-icon>{{ getLoginStatus() | translate }}
         </button>
         <button mat-menu-item (click)="contact()">
-          <mat-icon>contact_support</mat-icon>Contact us
+          <mat-icon>help</mat-icon>Contact us
         </button>
         <button mat-menu-item>
           <mat-icon>nights_stay</mat-icon>{{'nav_bar.menu.night_mode' |
