--- a/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
+++ b/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
@@ -1,103 +1,102 @@
 <app-jumbotron [Heading]="'admin.main_heading.all_orders'"></app-jumbotron>
-<div class="user-order-container">
-  <div class="user-order">
-    <mat-accordion>
-      <ng-container *ngFor="let user of user">
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              <img class="user-image" src="{{ user.image }}" />
-            </mat-panel-title>
-            <mat-panel-description>
-              <p>{{user.name}}</p>
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <mat-accordion>
-            <ng-container *ngFor="let order of user.order">
-              <mat-expansion-panel>
-                {{reset()}}
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    {{order.name}}
-                  </mat-panel-title>
-                  <mat-panel-description>
-                    {{order.date}}
-                  </mat-panel-description>
-                </mat-expansion-panel-header>
-                <div fxLayout="row" fxLayoutAlign="start">
-                  <div fxFlex="80%">
-                    <table mat-table [dataSource]="order.products">
-                      <ng-container matColumnDef="number">
-                        <th mat-header-cell *matHeaderCellDef style="width: 20%;">
-                          {{"admin.table.no" | translate}}
-                        </th>
-                        <td mat-cell *matCellDef="let element">
-                          {{increment()}}
-                        </td>
-                      </ng-container>
-                      <ng-container matColumnDef="image">
-                        <th mat-header-cell *matHeaderCellDef>
-                          {{"admin.table.image" | translate}}
-                        </th>
-                        <td mat-cell *matCellDef="let element">
-                          <img class="product-image" src="{{ element.image }}" />
-                        </td>
-                      </ng-container>
+<div class="order-container">
+  <mat-accordion>
+    <ng-container *ngFor="let user of user">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <img class="user-image" src="{{ user.image }}" />
+          </mat-panel-title>
+          <mat-panel-description>
+            <p>{{user.name}}</p>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-accordion>
+          <ng-container *ngFor="let order of user.order">
+            <mat-expansion-panel>
+              {{reset()}}
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  {{order.name}}
+                </mat-panel-title>
+                <mat-panel-description>
+                  {{order.date}}
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <div fxLayout="row" fxLayoutAlign="start">
+                <div fxFlex="80%">
+                  <table mat-table [dataSource]="order.products">
+                    <ng-container matColumnDef="number">
+                      <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                        {{"admin.table.no" | translate}}
+                      </th>
+                      <td mat-cell *matCellDef="let element">
+                        {{increment()}}
+                      </td>
+                    </ng-container>
+                    <ng-container matColumnDef="image">
+                      <th mat-header-cell *matHeaderCellDef>
+                        {{"admin.table.image" | translate}}
+                      </th>
+                      <td mat-cell *matCellDef="let element">
+                        <img class="product-image" src="{{ element.image[0].imageurl }}" />
+                      </td>
+                    </ng-container>
 
-                      <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef>
-                          {{"admin.table.name" | translate}}
-                        </th>
-                        <td mat-cell *matCellDef="let element">{{element.name}}</td>
-                      </ng-container>
+                    <ng-container matColumnDef="name">
+                      <th mat-header-cell *matHeaderCellDef>
+                        {{"admin.table.name" | translate}}
+                      </th>
+                      <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                    </ng-container>
 
-                      <ng-container matColumnDef="price">
-                        <th mat-header-cell *matHeaderCellDef>
-                          {{"admin.table.price" | translate}}
-                        </th>
-                        <td mat-cell *matCellDef="let element">{{element.price}}</td>
-                      </ng-container>
+                    <ng-container matColumnDef="price">
+                      <th mat-header-cell *matHeaderCellDef>
+                        {{"admin.table.price" | translate}}
+                      </th>
+                      <td mat-cell *matCellDef="let element">{{element.price}}</td>
+                    </ng-container>
 
-                      <ng-container matColumnDef="quantity">
-                        <th mat-header-cell *matHeaderCellDef style="width: 20%;">
-                          {{"admin.table.quantity" | translate}}
-                        </th>
-                        <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
-                      </ng-container>
+                    <ng-container matColumnDef="quantity">
+                      <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                        {{"admin.table.quantity" | translate}}
+                      </th>
+                      <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
+                    </ng-container>
 
-                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                  </div>
-                  <div fxFlex="20%">
-                    <mat-card>
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      <button
-                        mat-icon-button
-                        matTooltip="{{'tooltip.dispatch' | translate}}"
-                        matTooltipPosition="below"
-                        color="primary"
-                      >
-                        <mat-icon>check_circle</mat-icon>
-                      </button>
-                      &nbsp;&nbsp;&nbsp;&nbsp;
-                      <button
-                        mat-icon-button
-                        matTooltip="{{'tooltip.cancel' | translate}}"
-                        matTooltipPosition="below"
-                        color="warn"
-                      >
-                        <mat-icon>cancel</mat-icon>
-                      </button>
-                    </mat-card>
-                  </div>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
                 </div>
-              </mat-expansion-panel>
-            </ng-container>
-          </mat-accordion>
-        </mat-expansion-panel>
-      </ng-container>
-    </mat-accordion>
-  </div>
+                <div fxFlex="20%">
+                  <mat-card>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button
+                      mat-icon-button
+                      matTooltip="{{'tooltip.dispatch' | translate}}"
+                      matTooltipPosition="below"
+                      color="primary"
+                    >
+                      <mat-icon>check_circle</mat-icon>
+                    </button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <button
+                      mat-icon-button
+                      matTooltip="{{'tooltip.cancel' | translate}}"
+                      matTooltipPosition="below"
+                      color="warn"
+                    >
+                      <mat-icon>cancel</mat-icon>
+                    </button>
+                  </mat-card>
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </ng-container>
+        </mat-accordion>
+      </mat-expansion-panel>
+      <br />
+    </ng-container>
+  </mat-accordion>
 </div>
-<app-footer></app-footer>
+<app-footer [position]="sticky"></app-footer>
