--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -18,58 +18,106 @@
           </mat-card>
   </div>
   <div class="col-lg-6"> -->
-<div class="edit-container">
-  <mat-card class="edit-profile-card">
-    <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
-    <mat-card-content>
-      <form [formGroup]="editform">
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.username" | translate}}</mat-label>
-          <input autocomplete="off" matInput formControlName="usernameFormControl" />
-          <mat-error *ngIf="hasError('usernameFormControl','minlength')">
-            {{"user.form.username" | translate}} must be at least 3 characters long.
-          </mat-error>
-          <mat-error *ngIf="hasError('usernameFormControl','required')">
-            {{"user.form.username" | translate}} {{"user.form_validations.is_required" | translate}}
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.email" | translate}}</mat-label>
-          <input autocomplete="off" matInput formControlName="emailFormControl" />
-          <mat-error *ngIf="hasError('emailFormControl','email')">
-            {{"user.form_validations.please_enter_a_valid_email_address" | translate}}
-          </mat-error>
-          <mat-error *ngIf="hasError('emailFormControl','required')">
-            {{"user.form.email" | translate}} {{"user.form_validations.is_required" | translate}}
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
-          <input autocomplete="off" matInput formControlName="photoFormControl" />
-          <mat-error *ngIf="hasError('photoFormControl','required')">
-            {{"user.form.profile_pic" | translate}} {{"user.form_validations.is_required" |
-            translate}}
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>{{"user.form.password" | translate}}</mat-label>
-          <input autocomplete="off" matInput formControlName="passwordFormControl" />
-          <mat-error *ngIf="hasError('passwordFormControl','minlength')">
-            {{"user.form.password" | translate}}
-            {{"user.form_validations.must_be_at_least_4_characters_long" | translate}}
-          </mat-error>
-          <mat-error *ngIf="hasError('passwordFormControl','required')">
-            {{"user.form.password" | translate}} {{"user.form_validations.is_required" | translate}}
-          </mat-error>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-  </mat-card>
+<div class="edit-container" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="20px">
+  <div fxFlex="30%">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
+      </mat-card-header>
+      <div class="profile-image">
+        <img
+          mat-card-image
+          [src]="
+            userdata != undefined
+              ? userdata.photoUrl
+              : '../../../../assets/images/icon-login-profile.svg'
+          "
+          alt="Photo of a Shiba Inu"
+        />
+      </div>
+    </mat-card>
+  </div>
+  <div fxFlex="70%">
+    <mat-card class="edit-profile-card">
+      <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="editform">
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.username" | translate}}</mat-label>
+            <input autocomplete="off" matInput formControlName="usernameFormControl" />
+            <mat-icon matSuffix>person</mat-icon>
+            <mat-error
+              *ngIf="hasError('usernameFormControl','minlength') && !(hasError('usernameFormControl','pattern'))"
+            >
+              {{"user.form.username" | translate}} must be at least 3 characters long.
+            </mat-error>
+            <mat-error *ngIf="hasError('usernameFormControl','pattern')">
+              Invalid input
+            </mat-error>
+            <mat-error *ngIf="hasError('usernameFormControl','required')">
+              {{"user.form.username" | translate}} {{"user.form_validations.is_required" |
+              translate}}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.email" | translate}}</mat-label>
+            <input autocomplete="off" matInput formControlName="emailFormControl" />
+            <mat-icon matSuffix>email</mat-icon>
+            <mat-error *ngIf="hasError('emailFormControl','email')">
+              {{"user.form_validations.please_enter_a_valid_email_address" | translate}}
+            </mat-error>
+            <mat-error *ngIf="hasError('emailFormControl','required')">
+              {{"user.form.email" | translate}} {{"user.form_validations.is_required" | translate}}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
+            <input autocomplete="off" matInput formControlName="photoFormControl" />
+            <button mat-icon-button matTooltip="view image" matTooltipPosition="left" matSuffix>
+              <mat-icon>image</mat-icon>
+            </button>
+            <mat-error *ngIf="hasError('photoFormControl','required')">
+              {{"user.form.profile_pic" | translate}} {{"user.form_validations.is_required" |
+              translate}}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>{{"user.form.password" | translate}}</mat-label>
+            <input
+              autocomplete="off"
+              matInput
+              formControlName="passwordFormControl"
+              [type]="hide ? 'password' : 'text'"
+            />
+            <button
+              mat-icon-button
+              matTooltip="{{hide ? 'show' : 'hide'}}"
+              matTooltipPosition="left"
+              matSuffix
+              matSuffix
+              (click)="hide = !hide"
+            >
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="hasError('passwordFormControl','minlength')">
+              {{"user.form.password" | translate}}
+              {{"user.form_validations.must_be_at_least_4_characters_long" | translate}}
+            </mat-error>
+            <mat-error *ngIf="hasError('passwordFormControl','required')">
+              {{"user.form.password" | translate}} {{"user.form_validations.is_required" |
+              translate}}
+            </mat-error>
+          </mat-form-field>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
   <!-- </div>
       </div>
     </div> -->
 </div>
-<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right">
+<mat-toolbar color="primary" class="c-bottom-action-bar">
   <button id="btnSave" mat-flat-button (click)="save()">
     {{"user.form.save" | translate}}
   </button>
@@ -78,3 +126,4 @@
     {{"user.form.cancel" | translate}}
   </button>
 </mat-toolbar>
+<!-- </div> -->
