--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -24,18 +24,22 @@
         <mat-form-field appearance="outline">
           <mat-label>{{"user.form.username" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.name }}" />
+          <mat-icon matSuffix>person</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>{{"user.form.email" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.email }}" />
+          <mat-icon matSuffix>email</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>{{"user.form.password" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="value" />
+          <mat-icon matSuffix>vpn_key</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.photoUrl }}" />
+          <mat-icon matSuffix>insert_photo</mat-icon>
         </mat-form-field>
       </mat-card-content>
     </mat-card>
