--- a/src/app/features/user-management/view-orders/view-orders.component.html
+++ b/src/app/features/user-management/view-orders/view-orders.component.html
@@ -2,7 +2,7 @@
 <app-jumbotron [Heading]="'user.main_heading.your_orders'"></app-jumbotron>
 <div class="order-container">
   <mat-accordion>
-    <div *ngFor="let order of orderitems">
+    <ng-container *ngFor="let order of orderitems">
       <mat-expansion-panel>
         {{reset()}}
         <mat-expansion-panel-header>
@@ -22,15 +22,18 @@
               {{increment()}}
             </td>
           </ng-container>
+
           <ng-container matColumnDef="image">
             <th mat-header-cell *matHeaderCellDef>{{"user.product.image" | translate}}</th>
             <td mat-cell *matCellDef="let element">
-              <img class="product-image" src="{{ element.image }}" />
+              <img class="product-image" src="{{ element.image[0].imageurl }}" />
             </td>
           </ng-container>
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>{{"user.product.name" | translate}}</th>
+            <th mat-header-cell *matHeaderCellDef style="width: 18%;">
+              {{"user.product.name" | translate}}
+            </th>
             <td mat-cell *matCellDef="let element">{{element.name}}</td>
           </ng-container>
 
@@ -63,11 +66,13 @@
         </table>
       </mat-expansion-panel>
       <br />
-    </div>
+    </ng-container>
   </mat-accordion>
 </div>
+<br /><br />
+
 <mat-toolbar color="primary" class="c-bottom-action-bar order-button-wrap">
-  <button mat-raised-button [routerLink]="['/home']" class="order-button">
+  <button mat-raised-button [routerLink]="['/home']" color="accent" class="order-button">
     {{"user.cart.continue_shopping" | translate}}
   </button>
 </mat-toolbar>
