--- a/src/app/features/user-management/wish-list/wish-list.component.html
+++ b/src/app/features/user-management/wish-list/wish-list.component.html
@@ -1,35 +1,57 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.your_wish_list'"></app-jumbotron>
 <div class="table-wrapper">
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="image">
-      <mat-header-cell *matHeaderCellDef> {{"user.product.image" | translate}} </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{"user.product.image" | translate}}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <img class="product-image" src="{{ element.image }}" />
+        <img class="product-image" src="{{ element.image[0].imageurl }}" />
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> {{"user.product.name" | translate}} </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{"user.product.name" | translate}}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.name }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="price">
-      <mat-header-cell *matHeaderCellDef> {{"user.product.price" | translate}} </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{"user.product.price" | translate}}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.price }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <mat-header-cell *matHeaderCellDef> {{"user.product.action" | translate}} </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        {{"user.product.action" | translate}}
+      </mat-header-cell>
       <mat-cell *matCellDef="let element">
         <button
           mat-raised-button
-          color="primary"
+          color="accent"
           matTooltip="{{'tooltip.add_to_cart' | translate}}"
-          matTooltipPosition="right"
+          matTooltipPosition="left"
+          [matTooltipShowDelay]="500"
           (click)="addTocart(1, element)"
         >
           <mat-icon>add_shopping_cart</mat-icon>
+        </button>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button
+          mat-raised-button
+          color="primary"
+          matTooltip="quickview"
+          matTooltipPosition="right"
+          [matTooltipShowDelay]="500"
+          (click)="quickview(element)"
+        >
+          <mat-icon>remove_red_eye</mat-icon>
         </button>
       </mat-cell>
     </ng-container>
@@ -39,9 +61,10 @@
         <button
           mat-raised-button
           color="accent"
+          class="empty-btn"
           matTooltip="{{'tooltip.clear_list' | translate}}"
           matTooltipPosition="above"
-          [matTooltipShowDelay]="1000"
+          [matTooltipShowDelay]="500"
           (click)="emptywishList()"
         >
           {{"user.product.clear_list" | translate}}
@@ -51,8 +74,10 @@
         <button
           mat-raised-button
           color="warn"
+          class="delete-btn"
           matTooltip="{{'tooltip.delete_item' | translate}}"
           matTooltipPosition="right"
+          [matTooltipShowDelay]="500"
           (click)="removeFromWishlist(element)"
         >
           <mat-icon>delete</mat-icon>
