--- a/src/app/layout/homepage/page-content/page-content.component.html
+++ b/src/app/layout/homepage/page-content/page-content.component.html
@@ -19,4 +19,4 @@
     <app-category-tiles [categoryitems]="categoryitems"></app-category-tiles>
   </ng-container>
 </div>
-<app-footer></app-footer>
+<app-footer [position]="sticky"></app-footer>
