--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,10 +1,22 @@
 .footer {
   margin-top: 20px;
   font-weight: normal;
+  z-index: 2;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  height: 56px;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.08), 0 -2px 8px rgba(0, 0, 0, 0.12);
+  padding: 11px 15px;
   .signature {
     flex: 1 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .version {
+    position: relative;
+    left: -10%;
   }
 }
