--- a/src/assets/css/c-angular-component.scss
+++ b/src/assets/css/c-angular-component.scss
@@ -59,15 +59,13 @@
 /* box shadow
 --------------------------*/
 @mixin angular-shadow-1 {
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.06),
-    1px 1px 6px rgba(148, 148, 148, 0.09);
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.06), 1px 1px 6px rgba(148, 148, 148, 0.09);
 }
-
 
 /* mat card
 --------------------------*/
 .mat-card {
-  &:not([class*=mat-elevation-z]) {
+  &:not([class*='mat-elevation-z']) {
     @include angular-shadow-1;
     border-radius: map-get($map: $border-radius, $key: r0);
   }
@@ -110,7 +108,7 @@
         left: -8px;
         right: -8px;
         height: 1px;
-        background-color: map-get($map: $global-color, $key:neutral-1);
+        background-color: map-get($map: $global-color, $key: neutral-1);
         position: absolute;
         top: 1px;
       }
@@ -127,10 +125,9 @@
 
     &.mat-expansion-panel-spacing {
       margin-bottom: 15px !important;
-
     }
 
-    &:not([class*=mat-elevation-z]) {
+    &:not([class*='mat-elevation-z']) {
       @include angular-shadow-1;
     }
 
@@ -157,7 +154,6 @@
 
           .mat-expansion-panel-header-title {
             padding-left: 42px;
-
           }
         }
       }
@@ -179,6 +175,7 @@
     .mat-expansion-panel-body {
       padding-left: 15px;
       padding-right: 15px;
+      padding-top: 15px;
 
       .c-mat-panel-description {
         color: map-get($map: $global-color, $key: neutral-lighter);
@@ -189,7 +186,6 @@
       }
     }
   }
-
 
   /* Hierarcy in accordion
 --------------------------*/
@@ -251,7 +247,7 @@
                 z-index: -1;
                 display: block;
                 position: absolute;
-                bottom:0;
+                bottom: 0;
                 left: -14px;
                 height: calc(100% - 12px);
                 width: 2px;
@@ -268,7 +264,6 @@
   }
 }
 
-
 /* Form
 --------------------------*/
 .mat-block {
@@ -278,7 +273,8 @@
 .mat-form-field {
   .mat-form-field-wrapper {
     .mat-form-field-flex {
-      .mat-form-field-infix {}
+      .mat-form-field-infix {
+      }
     }
   }
 
@@ -298,7 +294,6 @@
     }
 
     .mat-form-field-infix {
-
       i {
         // color ball
         display: block;
@@ -315,10 +310,9 @@
 }
 
 .mat-form-field-appearance-legacy {
-
   .mat-form-field-label,
   .mat-hint {
-    color: map-get($map: $global-color, $key:neutral-lighter);
+    color: map-get($map: $global-color, $key: neutral-lighter);
   }
 }
 
@@ -399,8 +393,6 @@
   .mat-divider {
     border-top-color: map-get($map: $global-color, $key: neutral-0);
   }
-
-
 }
 
 .c-activity-list.mat-list-base {
@@ -440,10 +432,7 @@
       display: block;
       font-size: 12px;
       color: map-get($map: $global-color, $key: neutral);
-
     }
-
-
   }
 }
 
@@ -470,5 +459,4 @@ div[_ngcontent-ttp-c1] {
   .bar[_ngcontent-ttp-c1] {
     background-color: var(map-get($map: $global-theme-variable, $key: global_color_primary));
   }
-
 }
