--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/css/Globalportal.scss';
+@import 'assets/css/white-component.scss';
+@import 'assets/css/shared-common.scss';
+@import 'assets/css/pre-loader.scss';
 @import 'assets/css/variable';
 
-.product-list-page {
-  height: 100%;
-  height: 704px;
-}
 .list-product-style {
   overflow: hidden !important;
   min-height: 900px;
@@ -25,141 +24,4 @@ button:focus {
 .mat-horizontal-content-container {
   padding: 0 !important;
 }
-//----------------------------PRE - LOADER------------------------------------------------
-.pre-loader {
-  display: block;
-}
 
-.pre-loader span {
-  display: inline-block;
-  height: 20px;
-  margin-left: 45%;
-  margin-top: 20%;
-  width: 20px;
-  border-radius: 50%;
-}
-
-.pre-loader span:not(:first-child) {
-  margin-left: 10px;
-}
-
-.pre-loader span:nth-child(1) {
-  background: #4285f4;
-  animation: move 0.6s ease-in-out -0.25s infinite alternate;
-}
-
-.pre-loader span:nth-child(2) {
-  background: #db4437;
-  animation: move 0.6s ease-in-out -0.5s infinite alternate;
-}
-
-.pre-loader span:nth-child(3) {
-  background: #f4b400;
-  animation: move 0.6s ease-in-out -0.75s infinite alternate;
-}
-
-.pre-loader span:nth-child(4) {
-  background: #0f9d58;
-  animation: move 0.6s ease-in-out -1s infinite alternate;
-}
-.pre-loader span:nth-child(5) {
-  background: #dd0faa;
-  animation: move 0.6s ease-in-out -1.25s infinite alternate;
-}
-@keyframes move {
-  from {
-    transform: translateY(-10px);
-  }
-  to {
-    transform: translateY(5px);
-  }
-}
-//--------------------------------------- Form --------------------------------------------------------
-
-.input-template {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  .input-card {
-    // min-width: 300px;
-    width: 420px;
-    min-height: 560px;
-    &.mat-card:not([class*='mat-elevation-z']) {
-      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12);
-    }
-    &.mat-card {
-      padding: 0;
-      border-radius: 10px;
-      .mat-card-header {
-        margin: 0;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        background-color: #33b5e5;
-        height: 100px;
-        justify-content: center;
-        .mat-card-title {
-          color: white;
-          position: relative;
-          height: 60px;
-          font-size: 25px;
-          top: 35px;
-        }
-      }
-      .mat-card-actions {
-        text-align: center;
-        font-size: 10px;
-        .signin-btn {
-          border: 3px solid #28a745;
-          color: #28a745;
-          &:hover {
-            color: white;
-            background-color: #28a745;
-          }
-        }
-        .facebook-btn {
-          color: #3f51b5c4;
-          border: 3px solid #3f51b5c4;
-          &:hover {
-            color: white;
-            background-color: #3f51b5;
-          }
-        }
-        .google-btn {
-          color: #f44336d9;
-          border: 3px solid #f44336d9;
-          &:hover {
-            color: white;
-            background-color: #f44336;
-          }
-        }
-        .mat-raised-button {
-          width: 72%;
-          height: 45px;
-          margin-bottom: 20px;
-          border-radius: 20px;
-          font-size: 18px;
-        }
-      }
-      .input-text {
-        margin-top: -10px;
-        text-align: center;
-      }
-    }
-    .input-form {
-      min-width: 295px;
-      width: 100%;
-      padding: 30px 60px 0px 60px;
-      .input-full-width {
-        margin-bottom: 10px;
-        width: 100%;
-        .mat-input-element {
-          margin-top: 1em;
-        }
-        .mat-form-field-label {
-          font-size: 17px;
-        }
-      }
-    }
-  }
-}
