--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -43,9 +43,7 @@
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>{{ getLoginStatus() | translate }}
         </button>
-        <button mat-menu-item (click)="contact()">
-          <mat-icon>help</mat-icon>Contact us
-        </button>
+        <button mat-menu-item (click)="contact()"><mat-icon>help</mat-icon>Contact us</button>
         <button mat-menu-item>
           <mat-icon>nights_stay</mat-icon>{{'nav_bar.menu.night_mode' |
           translate}}&nbsp;&nbsp;&nbsp;&nbsp;
