--- a/src/assets/css/white-component.scss
+++ b/src/assets/css/white-component.scss
@@ -125,8 +125,13 @@
         }
       }
       .input-text {
-        margin-top: -10px;
+        margin-top: -25px;
         text-align: center;
+        .forgot-text {
+          position: relative;
+          top: -8px;
+          color: cadetblue;
+        }
       }
     }
     .input-form {
