--- a/src/app/features/user-management/contact/contact.component.scss
+++ b/src/app/features/user-management/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .contact-template {
-  padding: 50px 200px 0px 200px;
+  padding: 50px 250px 0px 250px;
   .input-card {
     // min-width: 300px;
     // width: 1000px;
@@ -58,9 +58,9 @@
       padding: 30px 60px 0px 60px;
       .table-full-width {
         width: 100%;
-        td {
-          padding-right: 25px;
-        }
+        // td {
+        //   padding-right: 25px;
+        // }
       }
       .input-full-width {
         margin-bottom: 10px;
