--- a/src/app/shared/authors-carousel/authors-carousel.component.html
+++ b/src/app/shared/authors-carousel/authors-carousel.component.html
@@ -1,57 +1,45 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-center m-auto">
-      <h2>Testimonials</h2>
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Carousel indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <!-- Wrapper for carousel items -->
-        <div class="carousel-inner">
-          <div class="item carousel-item active">
-            <div class="img-box"><img src="/examples/images/clients/1.jpg" alt="" /></div>
-            <p class="testimonial">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius
-              quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada
-              ante. Idac bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.
-            </p>
-            <p class="overview"><b>Paula Wilson</b>, Media Analyst</p>
+<app-navbar [isHidden]="true"></app-navbar>
+<div class="author-container">
+  <div class="eight-part">
+    <h2>Creators</h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Carousel indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
+      <!-- Wrapper for carousel items -->
+      <div class="carousel-inner">
+        <div class="item carousel-item active">
+          <div class="img-box">
+            <img src="../../../assets/images/icon-login-profile.svg" alt="" />
           </div>
-          <div class="item carousel-item">
-            <div class="img-box"><img src="/examples/images/clients/2.jpg" alt="" /></div>
-            <p class="testimonial">
-              Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit
-              tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis.
-              Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio.
-            </p>
-            <p class="overview"><b>Antonio Moreno</b>, Web Developer</p>
-          </div>
-          <div class="item carousel-item">
-            <div class="img-box"><img src="/examples/images/clients/3.jpg" alt="" /></div>
-            <p class="testimonial">
-              Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam
-              faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus
-              risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor
-              eget rutrum.
-            </p>
-            <p class="overview"><b>Michael Holz</b>, Seo Analyst</p>
-          </div>
+          <p class="testimonial">
+            The responsibilities of an Author include writing original stories for novels, plays,
+            television scripts, and movies. Authors also write journals, develop story elements, and
+            rewrite and revise pieces written by other writers
+          </p>
+          <p class="overview"><b>Kaushal Shah</b>, Full Stack</p>
         </div>
-        <!-- Carousel controls -->
-        <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
-          <i class="fa fa-angle-left"></i>
-        </a>
-        <a
-          class="carousel-control right carousel-control-next"
-          href="#myCarousel"
-          data-slide="next"
-        >
-          <i class="fa fa-angle-right"></i>
-        </a>
+        <ng-container *ngFor="let author of authors">
+          <div class="item carousel-item">
+            <div class="img-box"><img src="{{author.image}}" alt="" /></div>
+            <p class="testimonial">
+              {{author.description}}
+            </p>
+            <p class="overview"><b>{{author.name}}</b>, {{author.profession}}</p>
+          </div>
+        </ng-container>
       </div>
+      <!-- Carousel controls -->
+      <a class="carousel-control left carousel-control-prev" href="#myCarousel" data-slide="prev">
+        <mat-icon>keyboard_arrow_left</mat-icon>
+      </a>
+      <a class="carousel-control right carousel-control-next" href="#myCarousel" data-slide="next">
+        <mat-icon>keyboard_arrow_right</mat-icon>
+      </a>
     </div>
   </div>
 </div>
