--- a/src/app/shared/authors-carousel/authors-carousel.component.scss
+++ b/src/app/shared/authors-carousel/authors-carousel.component.scss
@@ -1,5 +1,20 @@
-body {
-  font-family: 'Open Sans', sans-serif;
+// .containerr {
+//   width: 100%;
+//   padding: 40px 15px 0px 15px;
+//   margin-right: auto;
+//   margin-left: auto;
+//   .roww {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-right: -15px;
+//     margin-left: -15px;
+//   }
+// }
+.author-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
 }
 h2 {
   color: #333;
@@ -16,7 +31,7 @@ h2::after {
   position: absolute;
   margin: 0 auto;
   height: 3px;
-  background: #8fbc54;
+  background: #673ab7;
   left: 0;
   right: 0;
   bottom: -10px;
@@ -58,16 +73,15 @@ h2::after {
 }
 .carousel .overview b {
   text-transform: uppercase;
-  color: #7aa641;
+  color: #673ab7;
 }
 .carousel .carousel-control {
   width: 40px;
   height: 40px;
-  margin-top: -20px;
-  top: 50%;
+  top: 15%;
   background: none;
 }
-.carousel-control i {
+.carousel-control .mat-icon {
   font-size: 68px;
   line-height: 42px;
   position: absolute;
