encoding and small editform and divider in menu

--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.scss
@@ -5,7 +5,7 @@
   padding: 15px 60px 0px 60px;
   .edit-profile-card {
     // width: 800px;
-    max-height: 360px;
+    max-height: 350px;
     width: 100%;
     border-radius: 10px;
     box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
@@ -16,8 +16,12 @@
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
       // transform: translateY(-2px);
     }
-    .mat-form-field {
-      width: 100%;
+
+    .edit-form {
+      font-size: 13px;
+      .mat-form-field {
+        width: 100%;
+      }
     }
   }
   .example-card {
