--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -41,7 +41,7 @@
     <mat-card class="edit-profile-card">
       <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="editform">
+        <form [formGroup]="editform" class="edit-form">
           <mat-form-field appearance="outline">
             <mat-label>{{"user.form.username" | translate}}</mat-label>
             <input autocomplete="off" matInput formControlName="usernameFormControl" />
