--- a/src/app/shared/authors-carousel/authors-carousel.component.scss
+++ b/src/app/shared/authors-carousel/authors-carousel.component.scss
@@ -86,7 +86,8 @@ h2::after {
   line-height: 42px;
   position: absolute;
   display: inline-block;
-  color: rgba(0, 0, 0, 0.8);
+  // color: rgba(0, 0, 0, 0.8);
+  color: #673ab7;
   text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
 }
 .carousel .carousel-indicators {
@@ -105,6 +106,7 @@ h2::after {
   box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 .carousel-indicators li.active {
-  background: #555;
+  // background: #555;
+  background: #673ab7;
   box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
 }
