--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -34,6 +34,7 @@
         <button mat-menu-item (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>{{ getLoginStatus() | translate }}
         </button>
+        <mat-divider></mat-divider>
         <button [hidden]="isAdmin" mat-menu-item [routerLink]="['/usersettings/profile']">
           <mat-icon>account_circle</mat-icon>{{'nav_bar.menu.your_account' | translate}}
         </button>
@@ -43,6 +44,7 @@
         <button [hidden]="isAdmin" mat-menu-item [routerLink]="['/usersettings/wishlist']">
           <mat-icon>favorite</mat-icon>{{'nav_bar.menu.your_wishlist' | translate}}
         </button>
+        <mat-divider></mat-divider>
         <button mat-menu-item (click)="contact()"><mat-icon>help</mat-icon>Contact us</button>
         <button mat-menu-item>
           <mat-icon>nights_stay</mat-icon>{{'nav_bar.menu.night_mode' |
